WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155891
[Mac] Audio tracks in alternate groups are not represented correctly as AudioTracks
https://bugs.webkit.org/show_bug.cgi?id=155891
Summary
[Mac] Audio tracks in alternate groups are not represented correctly as Audio...
Jer Noble
Reported
2016-03-25 10:28:33 PDT
[Mac] Audio tracks in alternate groups are not represented correctly as AudioTracks
Attachments
Patch
(4.57 MB, patch)
2016-03-25 10:53 PDT
,
Jer Noble
eric.carlson
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-yosemite
(769.02 KB, application/zip)
2016-03-25 11:41 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(914.71 KB, application/zip)
2016-03-25 11:43 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(837.03 KB, application/zip)
2016-03-25 11:55 PDT
,
Build Bot
no flags
Details
Patch for landing
(4.57 MB, patch)
2016-03-25 12:54 PDT
,
Jer Noble
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(771.39 KB, application/zip)
2016-03-25 13:41 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(771.42 KB, application/zip)
2016-03-25 13:44 PDT
,
Build Bot
no flags
Details
Patch for landing
(4.57 MB, patch)
2016-03-25 13:52 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews116 for mac-yosemite
(886.61 KB, application/zip)
2016-03-25 14:05 PDT
,
Build Bot
no flags
Details
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-03-25 10:53:58 PDT
Created
attachment 274918
[details]
Patch
Jer Noble
Comment 2
2016-03-25 10:55:53 PDT
<
rdar://problem/24841372
>
Build Bot
Comment 3
2016-03-25 11:41:43 PDT
Comment on
attachment 274918
[details]
Patch
Attachment 274918
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1038169
New failing tests: media/track/video-track-alternate-groups.html
Build Bot
Comment 4
2016-03-25 11:41:45 PDT
Created
attachment 274922
[details]
Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-03-25 11:43:08 PDT
Created
attachment 274923
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-03-25 11:55:51 PDT
Comment on
attachment 274918
[details]
Patch
Attachment 274918
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1038181
New failing tests: media/track/video-track-alternate-groups.html
Build Bot
Comment 7
2016-03-25 11:55:54 PDT
Created
attachment 274924
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Jer Noble
Comment 8
2016-03-25 12:54:28 PDT
Created
attachment 274928
[details]
Patch for landing
Build Bot
Comment 9
2016-03-25 13:41:22 PDT
Comment on
attachment 274928
[details]
Patch for landing
Attachment 274928
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1038588
New failing tests: media/track/video-track-alternate-groups.html
Build Bot
Comment 10
2016-03-25 13:41:25 PDT
Created
attachment 274935
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 11
2016-03-25 13:44:49 PDT
Comment on
attachment 274928
[details]
Patch for landing
Attachment 274928
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1038593
New failing tests: media/track/video-track-alternate-groups.html
Build Bot
Comment 12
2016-03-25 13:44:52 PDT
Created
attachment 274937
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Jer Noble
Comment 13
2016-03-25 13:52:28 PDT
Created
attachment 274938
[details]
Patch for landing
Build Bot
Comment 14
2016-03-25 14:05:07 PDT
Comment on
attachment 274928
[details]
Patch for landing
Attachment 274928
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1038632
New failing tests: media/track/video-track-alternate-groups.html
Build Bot
Comment 15
2016-03-25 14:05:10 PDT
Created
attachment 274939
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 16
2016-03-25 17:26:47 PDT
Comment on
attachment 274938
[details]
Patch for landing Clearing flags on attachment: 274938 Committed
r198703
: <
http://trac.webkit.org/changeset/198703
>
Ryan Haddad
Comment 17
2016-03-25 18:23:54 PDT
The test added with this change appears to be failing on El Capitan: --- /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/media/track/video-track-alternate-groups-expected.txt +++ /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/media/track/video-track-alternate-groups-actual.txt @@ -21,8 +21,8 @@ RUN(video.src = findMediaFile("video", "../content/audio-tracks-alternate-group-with-fallback")) EVENT(canplaythrough) EXPECTED (video.audioTracks.length == '3') OK -TRACK id:2 kind:main language:en -TRACK id:4 kind:main language:fr -TRACK id:6 kind:main language:es +TRACK id:3 kind:main language:en +TRACK id:5 kind:main language:fr +TRACK id:7 kind:main language:es END OF TEST
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r198703%20(4613)/results.html
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r198704%20(4739)/results.html
Is this a sign of a problem, or do we just need a rebaseline for El Capitan?
Jer Noble
Comment 18
2016-03-28 08:44:28 PDT
(In reply to
comment #17
)
> The test added with this change appears to be failing on El Capitan: > > --- > /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/ > media/track/video-track-alternate-groups-expected.txt > +++ > /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/ > media/track/video-track-alternate-groups-actual.txt > @@ -21,8 +21,8 @@ > RUN(video.src = findMediaFile("video", > "../content/audio-tracks-alternate-group-with-fallback")) > EVENT(canplaythrough) > EXPECTED (video.audioTracks.length == '3') OK > -TRACK id:2 kind:main language:en > -TRACK id:4 kind:main language:fr > -TRACK id:6 kind:main language:es > +TRACK id:3 kind:main language:en > +TRACK id:5 kind:main language:fr > +TRACK id:7 kind:main language:es > END OF TEST > >
https://build.webkit.org/results/
> Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r198703%20(4613)/results.html >
https://build.webkit.org/results/
> Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r198704%20(4739)/results.html > > Is this a sign of a problem, or do we just need a rebaseline for El Capitan?
That implies that this machine is choosing the AC-3 tracks. Yes, let's rebaseline.
Jer Noble
Comment 19
2016-03-28 09:15:45 PDT
(In reply to
comment #18
)
> (In reply to
comment #17
) > > The test added with this change appears to be failing on El Capitan: > > > > --- > > /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/ > > media/track/video-track-alternate-groups-expected.txt > > +++ > > /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/ > > media/track/video-track-alternate-groups-actual.txt > > @@ -21,8 +21,8 @@ > > RUN(video.src = findMediaFile("video", > > "../content/audio-tracks-alternate-group-with-fallback")) > > EVENT(canplaythrough) > > EXPECTED (video.audioTracks.length == '3') OK > > -TRACK id:2 kind:main language:en > > -TRACK id:4 kind:main language:fr > > -TRACK id:6 kind:main language:es > > +TRACK id:3 kind:main language:en > > +TRACK id:5 kind:main language:fr > > +TRACK id:7 kind:main language:es > > END OF TEST > > > >
https://build.webkit.org/results/
> > Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r198703%20(4613)/results.html > >
https://build.webkit.org/results/
> > Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r198704%20(4739)/results.html > > > > Is this a sign of a problem, or do we just need a rebaseline for El Capitan? > > That implies that this machine is choosing the AC-3 tracks. Yes, let's > rebaseline.
Rebaselined in
r198742
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug